--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "lodash": "^4.17.21",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.21.1",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
