--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.11.13",
+    "@hookform/resolvers": "^3.0.0",
     "@prisma/client": "^4.9.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -22,11 +24,13 @@
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/eslint": "^8.21.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.0",
