--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
     "next": "^13.2.1",
+    "npm": "^9.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
+    "slugify": "^1.6.6",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
