--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@vercel/analytics": "^0.1.11",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "i": "^0.3.7",
