--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.16.4",
     "@headlessui/react": "^1.7.14",
+    "@headlessui/tailwindcss": "^0.1.3",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.29.5",
